tests/negative/byte_range.urb
numbers = 256 0,
numbers.type = "foo",
